--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 
 
 
-#VITE_API_URL= http://127.0.0.1:3000/api/v1
-VITE_API_URL = http://192.168.0.51:3000/api/v1
+VITE_API_URL = http://localhost:3000/api/v1
+#VITE_API_URL = http://192.168.0.51:3000/api/v1
+#VITE_API_URL = http://149.50.145.228:3001/api/v1
